Fixed icon issue, added randomised search and fixed width too small issue

--- a/popup.css
+++ b/popup.css
@@ -1,5 +1,8 @@
 body{
-    width: auto;
+    min-width: 500px;
+    max-width: 100%;
+    position: relative;
+    padding: 15px;
 }
 .fullName{
     width: 40px;
